# ai-school-graduation-project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: agent.py  app.py  config.py  download.py  embeddings.py  indexer.py  mcp_server.py  rag.py
tests/: helpers.py
tests/integration/: test_agent_e2e.py
