[project]
name = "wine-chatbot"
version = "0.1.0"
description = "A chatbot over the Kaggle Wine Reviews dataset combining ChromaDB RAG and a Pandas MCP server under an LLM agent."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit>=1.36",
    "chromadb>=0.5",
    "pandas>=2.2",
    "kagglehub[pandas-datasets]>=0.3",
    "openai>=1.40",
    "mcp>=1.2",
    "python-dotenv>=1.0",
]

[project.scripts]
download-data = "download:main"
build-index = "indexer:main"
run-mcp = "mcp_server:main"
run-app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat module layout: modules live directly under src/ and are importable as
# top-level names (e.g. `import config`, `import agent`).
sources = ["src"]
include = ["src/*.py"]
